# bord

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.spin  LICENSE  README.md  bord-docker.yaml  bord-service.yaml  bord-spin.yaml  install-spin-operator-extra.bat  install-spin-operator.bat  spin.bat  spin.toml  test-init-spin-vs-docker.ps1  test.yaml  wasm-filter-spin.yaml
.k3d/: cluster-config.yaml  config.toml.tmpl  registries.yaml
src/: auth.rs  config.rs  db.rs  follow.rs  handlers.rs  init_db.rs  lib.rs  models.rs  posts.rs  templates.rs  users.rs
src/core/: db.rs  errors.rs  helpers.rs  mod.rs  query_params.rs  static_server.rs
static/: api.js  index.html  profile.html  style.css
tests/: integration.rs  perf.rs
wasm-filter/: Cargo.toml  README.md  config.toml  spin.toml  test-batch-eval.bat  test.csv
wasm-filter/src/: lib.rs  models.rs  tokenizer.rs  tract_model.rs
