[package]
name = "bord"
authors = ["Mihai"]
description = ""
version = "0.1.0"
rust-version = "1.78"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-sdk = "5.1.1"
http = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
rust-embed = "8"
mime_guess = "2"
regex = "1"
html-escape = "0.2"
ammonia = "4"
urlencoding = "2"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }

[workspace]

