[package]
name = "bord-filter"
authors = ["Mihai"]
description = "WASM transparent proxy for Bord social content filtering"
version = "0.1.0"
rust-version = "1.78"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
debug = []

[dependencies]
anyhow = "1"
spin-sdk = "5.1.1"
http = "0.2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt"] }
toml = "0.8"
tract-core = "0.21"
tract-onnx = "0.21"
